feat: adicionado JEP 439